# uniprot_blast_viewer

./: README.md  pyproject.toml
src/uniprot_blast_viewer/: .view_blast_jason_web.py.swp  __init__.py  general_utils.py  globals.py  uniprot_querry.py  view_blast_jason_web.py
src/uniprot_blast_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uniprot_blast_viewer/data/: .ncbiblast-R20251121-121303-0264-85327113-p2m.out.json.swp  ncbiblast-R20251121-121303-0264-85327113-p2m.out.json
